tests/expect/error/function-declaration.nva
x := 4;

fn read_line_2(x: str): str {
    "read_line_2 " + x
}

fn read_line(x: str): str {
    print("Function declaration with no arguments");
    "read_line " + read_line_2("Hallo, Welt!")
}

//fn max(x: int, y: int): int {
//    print("Function declaration with more than one argument");
//}

//i := max(2, 2);
print(read_line("999"));

print_int(x);